Fixed Alignement issues in Human capital page

--- a/src/components/HumanCapitalSolutions.css
+++ b/src/components/HumanCapitalSolutions.css
@@ -3,40 +3,17 @@
     background-image: url("../assests/images/HumanCapitalSolutions.png");
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 75vh;
+    width: 95%;
+    height: 90vh;
     position: relative;
+    margin-left: 4%;
   }
   
-  .floating-text {
-    position: absolute;
-    bottom: 35%;
-    left: 25%;
-    transform: translateX(-50%);
-    text-align: left;
-    color: #0056c3;
-    background: #ffffffe5; /* Semi-transparent background */
-    padding: 20px;
-    border-radius: 16px;
-  }
-  
-  .floating-title {
-    font-size: 44px !important;
-    font-family: sans-serif !important;
-  }
-  
-  .floating-subtitle {
-    color: #0056c3 !important;
-    font-weight: 600 !important;
-    font-size: 42px !important;
-    width: 560px !important;
-    font-family: "Nunito", sans-serif !important;
-  }
   
   /* Stats Section */
   .stats-section {
     background-color: #f7fcff;
-    margin: 4% 2.5% !important;
+    margin: 1.3% 2.5% !important;
     padding: 10px !important;
   }
   
@@ -48,18 +25,19 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: right center;
-    left: 10%;
+    left: 12.5%;
   }
   
   /* Button Section */
-  .button-container {
+  .button-container-humanCapital {
     display: flex;
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
-    width: 100%;
+    width: 80%;
     align-items: center;
     margin-left: 10%;
+    margin-top: 3% !important;
   }
   
   .custom-button {
@@ -73,7 +51,7 @@
     color: #0056c3 !important;
     border: none !important;
     width: 50% !important;
-    height: 80px !important;
+    height: 75px !important;
   }
   
   .custom-button:hover {
@@ -89,7 +67,7 @@
   }
   
   /* Section 4: Image Section */
-  .image-section {
+  .image-section-HumanCapital {
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -122,6 +100,12 @@
     text-transform: uppercase; /* Optional: Make captions uppercase for emphasis */
   }
 
+  .EmpowerDevelop-section-image{
+    width: 75%;
+    margin-left: 12.5%;
+    margin-top: 2%;
+  }
+
   .empower-develop-img {
     border-top: 2px dashed #b8d0f0; /* Adjust the color and width as needed */
     margin-top: -12% !important;
@@ -134,6 +118,11 @@
     margin: 4% auto;
   }
   
+  .why-choose-us-section-EmpowerDevelop{
+    margin-left: 12.5% !important;
+    padding: 10px;
+    margin: 4% auto;
+  }
   .content-box {
     display: flex;
     flex-direction: column;
@@ -204,12 +193,10 @@
 
   }
 
-  .Empower-section{
-  }
-
+ 
   .Empower-section-image{
     width:75% !important;
-    margin-left: 14%;
+    margin-left: 12.5%;
     margin-top: -15%;
     margin-bottom: -14%;
 
